# binance-s3-trades

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: python-app.yaml  python-pypi.yaml
binance_s3_trades/: downloader.py
tests/: conftest.py  test_cli.py  test_core.py  test_downloader.py  test_logging.py  test_template.py  test_utils.py
