[tool.poetry]
name = "python-pypi-template"
version = "0.1.0"
description = ""
authors = ["Michal Polit <mpolit@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"
hypothesis = "^6.135.11"
pytest-cov = "^6.2.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
flake8 = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
