[project]
name = "binance-s3-trades"
version = "0.2.2"
description = "Seamlessly list and download Binance spot trade .zip files from the public S3 bucket"
readme = "README.md"
license = "MIT"
authors = [{ name = "Michal Polit", email = "mpolit@protonmail.com" }]
keywords = ["binance", "s3", "trades", "downloader"]
requires-python = ">=3.13,<4.0"
dynamic = ["dependencies"]

[project.urls]
homepage = "https://github.com/mpolit/binance-s3-trades"
repository = "https://github.com/mpolit/binance-s3-trades"

[tool.poetry.dependencies]
python = "^3.13"
boto3 = "1.43.19"
typer = "^0.26.7"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.6.0"
isort = "^8.0.1"
black = "^26.5.1"
ruff = "^0.15.15"
mypy = "^2.1.0"
safety = "^3.7.0"
bandit = "^1.9.4"
semgrep = "^1.164.0"
boto3-stubs = {extras = ["essential"], version = "^1.43.23"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py313"]
skip-string-normalization = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "C90"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
